--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,5 @@
         ["react-intl", {
             "messagesDir": "./translations/messages/"
         }]],
-    "presets": ["es2015", "react"]
+    "presets": ["env", "react"]
 }
