Depend on webpack 4 scratch versions

--- a/package.json
+++ b/package.json
@@ -88,14 +88,14 @@
     "redux-mock-store": "^1.2.3",
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
-    "scratch-audio": "0.1.0-prerelease.1516198804",
-    "scratch-blocks": "0.1.0-prerelease.1524267558",
-    "scratch-l10n": "2.0.20180108132626",
-    "scratch-paint": "0.2.0-prerelease.20180423143518",
-    "scratch-render": "0.1.0-prerelease.20180423214437",
-    "scratch-storage": "0.4.0",
-    "scratch-svg-renderer": "0.1.0-prerelease.20180423193917",
-    "scratch-vm": "0.1.0-prerelease.1524520946",
+    "scratch-audio": "github:mzgoddard/scratch-audio#webpack-4-test",
+    "scratch-blocks": "github:mzgoddard/scratch-blocks#webpack-4-test",
+    "scratch-l10n": "github:mzgoddard/scratch-l10n#webpack-4-test",
+    "scratch-paint": "github:mzgoddard/scratch-paint#webpack-4-test",
+    "scratch-render": "github:mzgoddard/scratch-render#webpack-4-test",
+    "scratch-storage": "github:mzgoddard/scratch-storage#webpack-4-test",
+    "scratch-svg-renderer": "github:mzgoddard/scratch-svg-renderer#webpack-4-test",
+    "scratch-vm": "github:mzgoddard/scratch-vm#webpack-4-test",
     "selenium-webdriver": "3.6.0",
     "startaudiocontext": "1.2.1",
     "style-loader": "^0.21.0",
